fix spacing between event days view

--- a/assets/sass/layout/session.scss
+++ b/assets/sass/layout/session.scss
@@ -246,3 +246,7 @@ category: TDH Justice Juvenile - Session
     margin-top: 2px;
   }
 }
+
+.view-session-days .views-row-first {
+  @include make-sm-column-offset(1);
+}
